Fixed overflow text bugs

--- a/app/assets/stylesheets/helper/_global-extend.scss
+++ b/app/assets/stylesheets/helper/_global-extend.scss
@@ -116,6 +116,11 @@
   top: 0;
 }
 
+%right-bottom-0 {
+  right: 0;
+  bottom: 0;
+}
+
 /* Class extend for display */
 %inline-block {
   display: inline-block;
